--- a/app/src/main/res/layout/activity_create_route.xml
+++ b/app/src/main/res/layout/activity_create_route.xml
@@ -1,75 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/padding_tiny"
-        android:gravity="bottom">
-        <TextView
-            android:layout_width="wrap_content"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_height="wrap_content"
-            android:text="@string/from"
-            android:layout_weight="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-        <EditText
-            android:id="@+id/from_text"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_tiny"
-            android:inputType="none" />
-        <ImageButton
-            android:id="@+id/pick_from_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_tiny"
-            android:src="@drawable/ic_pin_drop_black_36dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/padding_tiny"
-        android:gravity="center_vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/to"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-        <EditText
-            android:id="@+id/to_text"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_tiny"
-            android:inputType="none" />
-        <ImageButton
-            android:id="@+id/pick_to_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_tiny"
-            android:src="@drawable/ic_pin_drop_black_36dp"/>
-    </LinearLayout>
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/create_button"
             android:layout_width="match_parent"
+            android:layout_margin="@dimen/padding_tiny"
+            android:gravity="bottom">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/from"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            <EditText
+                android:id="@+id/from_text"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_tiny"
+                android:inputType="none" />
+            <ImageButton
+                android:id="@+id/pick_from_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/padding_tiny"
+                android:src="@drawable/ic_pin_drop_black_36dp"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:text="@string/create"
-            android:layout_margin="@dimen/padding_small"/>
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="invisible"/>
-    </FrameLayout>
-</LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/padding_tiny"
+            android:gravity="center_vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/to"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            <EditText
+                android:id="@+id/to_text"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_tiny"
+                android:inputType="none" />
+            <ImageButton
+                android:id="@+id/pick_to_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/padding_tiny"
+                android:src="@drawable/ic_pin_drop_black_36dp"/>
+        </LinearLayout>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/create_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:text="@string/create"
+                android:layout_margin="@dimen/padding_small"/>
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="invisible"/>
+        </FrameLayout>
+
+    </LinearLayout>
+    
+    <ListView
+        android:id="@+id/menu_list_view"
+        android:layout_width="@dimen/drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/black"
+        android:dividerHeight="@dimen/drawer_divider_height"
+        android:background="@color/colorDrawerBackground"/>
+
+</android.support.v4.widget.DrawerLayout>
