--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,12 @@
     <dimen name="padding_medium">12dp</dimen>
     <dimen name="padding_big">16dp</dimen>
     <dimen name="padding_large">20dp</dimen>
+
     <dimen name="cardview_route_corner">5dp</dimen>
     <dimen name="cardview_route_height">150dp</dimen>
     <dimen name="cardview_route_margin_left">6dp</dimen>
+
+    <dimen name="drawer_width">240dp</dimen>
+    <dimen name="drawer_divider_height">0dp</dimen>
+    <dimen name="drawer_list_item_height">40dp</dimen>
 </resources>
