--- a/app/src/main/res/layout/activity_create_route.xml
+++ b/app/src/main/res/layout/activity_create_route.xml
@@ -53,6 +53,55 @@
             android:layout_margin="@dimen/padding_tiny"
             android:src="@drawable/ic_pin_drop_black_36dp"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:paddingTop="@dimen/padding_large"
+        android:layout_margin="@dimen/padding_tiny"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/start_time"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        <EditText
+            android:id="@+id/start_time"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_tiny"
+            android:inputType="none" />
+        <ImageButton
+            android:id="@+id/pick_start_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding_tiny"
+            android:src="@drawable/ic_date_range_black_36dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_margin="@dimen/padding_tiny"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/finish_time"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        <EditText
+            android:id="@+id/finish_time"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_tiny"
+            android:inputType="none" />
+        <ImageButton
+            android:id="@+id/pick_finish_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding_tiny"
+            android:src="@drawable/ic_date_range_black_36dp"/>
+    </LinearLayout>
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
