--- a/app/src/main/res/layout/item_route_card.xml
+++ b/app/src/main/res/layout/item_route_card.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/from"
-                android:textColor="@color/colorCardTextSpecial"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
             <TextView
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/to"
                 android:textStyle="bold"
-                android:textColor="@color/colorCardTextSpecial"
+                android:textColor="@android:color/white"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/startTime"
                 android:textStyle="bold"
-                android:textColor="@color/colorCardTextSpecial"
+                android:textColor="@android:color/white"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -91,7 +91,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/startTime"
                 android:textStyle="bold"
-                android:textColor="@color/colorCardTextSpecial"
+                android:textColor="@android:color/white"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -113,7 +113,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/distance"
                 android:textStyle="bold"
-                android:textColor="@color/colorCardTextSpecial"
+                android:textColor="@android:color/white"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
             <TextView
                 android:layout_width="wrap_content"
